--- a/wp-full-stripe-free/assets/css/wpfs-admin.css
+++ b/wp-full-stripe-free/assets/css/wpfs-admin.css
@@ -5820,3 +5820,7 @@ input[type="email"].wpfs-input {
 .mx-none {
   max-width: none !important;
 }
+
+div.notice.themeisle-sale {
+  margin-top: 10px;
+}
